<resources>
    <string name="app_name">Taller3</string>
    <string name="calcular_ruta">Calcular Ruta</string>
    <string name="title_activity_dialog_options">DialogOptionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="apellido">Apellido</string>
    <string name="n_mero_identificaci_n">Número identificación</string>
    <string name="nombre">Nombre</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>

    <string name="Usuario_conectado">Nuevo usuario conectado</string>
</resources>